--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "lowdb": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -36,6 +37,7 @@
     "@types/jest": "^24.0.18",
     "@types/lowdb": "^1.0.9",
     "@types/node": "^12.7.5",
+    "@types/shortid": "0.0.29",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
