--- a/todo/package.json
+++ b/todo/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "classnames": "^2.2.6",
+    "formik": "^2.1.2",
     "immutability-helper": "^3.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -21,7 +22,8 @@
     "react-spinners": "^0.8.0",
     "styled-components": "^5.0.0",
     "typeface-roboto": "0.0.75",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/styled-components": "^4.4.2"
+    "@types/styled-components": "^4.4.2",
+    "@types/yup": "^0.26.27"
   }
 }
