--- a/todo/package.json
+++ b/todo/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.0",
     "styled-components": "^5.0.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "@types/yup": "^0.26.27"
   },
