--- a/todo/package.json
+++ b/todo/package.json
@@ -19,9 +19,12 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.0.0",
     "typeface-roboto": "0.0.75",
     "typescript": "~3.7.2",
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "@types/yup": "^0.26.27"
