--- a/todo/package.json
+++ b/todo/package.json
@@ -25,8 +25,10 @@
     "react-spinners": "^0.8.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0",
     "typeface-roboto": "0.0.75",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2",
     "yup": "^0.28.0"
   },
