--- a/todo/package.json
+++ b/todo/package.json
@@ -6,7 +6,6 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -54,11 +53,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.0",
     "@types/classnames": "^2.2.9",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
-    "@types/yup": "^0.26.27"
+    "@types/yup": "^0.26.27",
+    "cypress": "^3.8.2",
+    "react-test-renderer": "^16.12.0"
   },
   "proxy": "http://localhost:3001"
 }
