--- a/todo/package.json
+++ b/todo/package.json
@@ -2,6 +2,9 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "email": "sebastian.springer@maibornwolff.de",
+  },
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
@@ -59,7 +62,15 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "@types/yup": "^0.26.27",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "cypress": "^3.8.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "react-test-renderer": "^16.12.0"
   },
   "proxy": "http://localhost:3001"
