--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.6",
     "immer": "^8.0.1",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
