--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.0",
     "@types/classnames": "^2.2.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
