--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
+  },
+  "author": {
+    "email": "sebastian.springer@maibornwolff.de",
+    "url": "https://twitter.com/basti_springer"
   }
 }
