--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "autoprefixer": "^9.8.6",
+    "cypress": "^7.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "json-server": "^0.16.3",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
