--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^7.1.16",
+    "@types/redux-saga": "^0.10.5",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
     "immer": "^8.0.1",
@@ -12,6 +13,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
